@@ -3,13 +3,16 @@ package com.dropchop.recyclone.quarkus.it.rest.events;
 import com.dropchop.recyclone.base.api.model.query.Condition;
 import com.dropchop.recyclone.base.api.model.rest.MediaType;
 import com.dropchop.recyclone.base.api.model.utils.Iso8601;
+import com.dropchop.recyclone.base.api.model.utils.Uuid;
+import com.dropchop.recyclone.base.dto.model.base.DtoId;
 import com.dropchop.recyclone.base.dto.model.event.Event;
 import com.dropchop.recyclone.base.dto.model.event.EventDetail;
 import com.dropchop.recyclone.base.dto.model.event.EventItem;
 import com.dropchop.recyclone.base.dto.model.event.EventTrace;
 import com.dropchop.recyclone.base.dto.model.invoke.EventParams;
+import com.dropchop.recyclone.base.dto.model.invoke.ResultFilter;
 import com.dropchop.recyclone.quarkus.it.rest.events.mock.EventMockData;
-import com.fasterxml.jackson.core.JsonProcessingException;
+import com.dropchop.recyclone.quarkus.runtime.elasticsearch.ElasticSearchTestHelper;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import io.restassured.RestAssured;
@@ -18,6 +21,7 @@ import io.restassured.http.ContentType;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.*;
 
+import java.io.IOException;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -39,7 +43,11 @@ public class EventsResourceTest {
   ObjectMapper mapper;
 
   @Inject
+  @SuppressWarnings("CdiInjectionPointsInspection")
   EventMockData eventMockData;
+
+  @Inject
+  ElasticSearchTestHelper testHelper;
 
   @BeforeEach
   public void setUp() {
@@ -48,7 +56,7 @@ public class EventsResourceTest {
     );
   }
 
-  public static String EVENT_ID = "feea39e2-aea0-4395-8be3-dd42ca42f03c";
+  public static String EVENT_ID = Uuid.getTimeBased().toString();
   public static String EVENT_DETAIL_ID = "eebd0fda-9e81-4fa8-a4c6-d3cdbc06e4c8";
   public static String EVENT_TRACE_NAME = "some_test_flow";
 
@@ -63,8 +71,7 @@ public class EventsResourceTest {
     String UNIT = "unit";
   }
 
-  private void validate(List<Event> events) {
-    //assertEquals(1, events.size());
+  private void validateNonNested(List<Event> events) {
     Event rspEvent = events.getFirst();
     assertEquals(EVENT_ID, rspEvent.getId());
     assertNotNull(rspEvent.getCreated());
@@ -74,6 +81,11 @@ public class EventsResourceTest {
     assertEquals(Strings.DATA, rspEvent.getData());
     //assertEquals(rspEvent.getValue(), rspEvent.getValue());
     assertEquals(Strings.UNIT, rspEvent.getUnit());
+  }
+
+  private void validate(List<Event> events) {
+    validateNonNested(events);
+    Event rspEvent = events.getFirst();
     assertNotNull(rspEvent.getSource());
     assertNotNull(rspEvent.getSource().getSubject());
     assertEquals(Strings.EVENT_DETAIL, rspEvent.getSource().getSubject().getName());
@@ -115,7 +127,10 @@ public class EventsResourceTest {
 
   @Test
   @Order(10)
-  public void create() {
+  @Tag("create")
+  @Tag("delete")
+  @Tag("delete")
+  public void create() throws IOException {
 
     EventDetail detail = new EventDetail();
     detail.setId(UUID.randomUUID().toString());
@@ -160,22 +175,18 @@ public class EventsResourceTest {
       .and()
       .body(List.of(event))
       .when()
-      .post("/api/internal/events/?c_level=5")
+      .post("/api/internal/events")
       .then()
       .statusCode(200)
       .extract()
       .body().jsonPath().getList(".", Event.class);
-    this.validate(events);
+    this.validateNonNested(events);
+    testHelper.waitForObject("/event/_search",  EVENT_ID);
   }
 
   @Test
   @Order(20)
   public void search() {
-    try {
-      Thread.sleep(3000);
-    } catch (InterruptedException ignored) {
-    }
-
     Condition c = or(
       field("uuid", EVENT_ID),
       and(
@@ -183,9 +194,15 @@ public class EventsResourceTest {
       )
     );
 
-    EventParams params = EventParams.builder().condition(c).build();
-    params.tryGetResultFilter().setSize(100);
-    params.tryGetResultFilter().getContent().setTreeLevel(5);
+    EventParams params = EventParams
+        .builder()
+        .filter(
+            new ResultFilter()
+                .content(new ResultFilter.ContentFilter().treeLevel(5))
+                .size(100)
+        )
+        .condition(c)
+        .build();
 
     List<Event> events = given()
       .log().all()
@@ -207,11 +224,6 @@ public class EventsResourceTest {
   @Test
   @Order(25)
   public void get() {
-    try {
-      Thread.sleep(3000);
-    } catch (InterruptedException ignored) {
-    }
-
     List<Event> events = given()
       .log().all()
       .contentType(ContentType.JSON)
@@ -231,8 +243,8 @@ public class EventsResourceTest {
 
   @Test
   @Order(30)
-  public void delete() {
-
+  @Tag("delete")
+  public void delete() throws IOException {
     Event event = new Event();
     event.setId(EVENT_ID);
 
@@ -251,11 +263,8 @@ public class EventsResourceTest {
       .body().jsonPath().getList(".", Event.class);
 
     assertEquals(1, events.size());
+    testHelper.waitForObjects("/event/_search", EVENT_ID, 0);
 
-    try {
-      Thread.sleep(5000);
-    } catch (InterruptedException ignored) {
-    }
 
     Condition c = or(
         field("uuid", EVENT_ID)
@@ -286,7 +295,21 @@ public class EventsResourceTest {
 
   @Test
   @Order(35)
-  public void createMultiple() throws JsonProcessingException {
+  @Tag("createMultiple")
+  @Tag("searchBySpecificTraceId")
+  @Tag("searchAllEventsWithoutSpecificTraceId")
+  @Tag("searchEventsBySpecificId")
+  @Tag("searchEventsByTraceIdOrUnitString")
+  @Tag("searchEventsInPeriodWithTraceId")
+  @Tag("searchEventsByDateRange")
+  @Tag("searchEventsByDateRange2")
+  @Tag("searchEventsByDateRange3")
+  @Tag("complexQuery")
+  @Tag("complexQuery2")
+  @Tag("complexQuery3")
+  @Tag("complexQuery4")
+  @Tag("complexQuery5")
+  public void createMultiple() throws IOException {
     //List<Event> events = createMockEventsForTraceTest();
     List<Event> events = eventMockData.createMockEvents();
 
@@ -306,28 +329,20 @@ public class EventsResourceTest {
       .body().jsonPath().getList(".", Event.class);
 
     assertEquals(4, events.size());
-
+    List<String> eIds = events.stream().map(DtoId::getId).toList();
+    testHelper.waitForObjects("/event/_search", eIds, 4);
   }
 
   @Test
   @Order(40)
-  public void searchBySpecificTraceName() {
-    try {
-      Thread.sleep(3000);
-    } catch (InterruptedException ignored) {
-    }
-
-    /*
-     * Search by specific trace uuid
-     * */
+  @Tag("searchBySpecificTraceId")
+  public void searchBySpecificTraceId() {
     EventParams params = EventParams.builder().condition(
       and(field("trace.name", EVENT_TRACE_NAME))
     ).build();
 
     //Field field = field("trace.id", EVENT_TRACE_ID);
     //Condition c = and(field);
-
-
     params.tryGetResultFilter().setSize(100);
     params.tryGetResultFilter().getContent().setTreeLevel(5);
 
@@ -346,16 +361,15 @@ public class EventsResourceTest {
       .body().jsonPath().getList(".", Event.class);
 
     //this.validate(events);
-    //assertEquals(EVENT_TRACE_NAME, events.get(0).getTrace().getName());
-    //assertEquals(4, events.size());
+    assertEquals(EVENT_TRACE_ID, events.getFirst().getTrace().getName());
+    assertEquals(3, events.size());
+
   }
 
   @Test
   @Order(45)
-  public void searchAllEventsWithoutSpecificTraceName() {
-    /*
-     * Find all events except the one with this specific EVENT_TRACE_ID
-     * */
+  @Tag("searchAllEventsWithoutSpecificTraceId")
+  public void searchAllEventsWithoutSpecificTraceId() {
     EventParams params = EventParams.builder().condition(
       not(field("trace.name", EVENT_TRACE_NAME))
     ).build();
@@ -382,12 +396,8 @@ public class EventsResourceTest {
 
   @Test
   @Order(50)
+  @Tag("searchEventsBySpecificId")
   public void searchEventsBySpecificId() {
-
-    /*
-     * Find events:
-     *  by uuid
-     * */
     EventParams params = EventParams.builder().condition(
       and(field("uuid", "6b829aac-06d2-4cbc-9721-d6d24a3628dd"))
     ).build();
@@ -409,21 +419,14 @@ public class EventsResourceTest {
       .extract()
       .body().jsonPath().getList(".", Event.class);
 
-    assertEquals("6b829aac-06d2-4cbc-9721-d6d24a3628dd", events.get(0).getId());
+    assertEquals("6b829aac-06d2-4cbc-9721-d6d24a3628dd", events.getFirst().getId());
     assertEquals(1, events.size());
-
   }
 
   @Test
   @Order(55)
-  public void searchEventsByOrOperator() {
-
-    /*
-     * Find events:
-     * where uuid is EVENT_TRACE_ID
-     * or
-     * unit field has a value of "Mock_Unit"
-     * */
+  @Tag("searchEventsByTraceIdOrUnitString")
+  public void searchEventsByTraceIdOrUnitString() {
     EventParams params = EventParams.builder().condition(
       or(
         field("trace.name", EVENT_TRACE_NAME),
@@ -457,18 +460,13 @@ public class EventsResourceTest {
       assertTrue(matchesCondition, String.format("Event did not match any condition: %s", event));
     }
 
-    assertEquals("Mock_Unit", events.get(0).getUnit());
-
+    assertEquals("Mock_Unit", events.getFirst().getUnit());
   }
 
   @Test
   @Order(60)
-  public void searchEventsWithMultipleFilters() {
-
-    /*
-     * Find events:
-     * between dates and uuid must be EVENT_TRACE_ID
-     * */
+  @Tag("searchEventsInPeriodWithTraceId")
+  public void searchEventsInPeriodWithTraceId() {
     EventParams params = EventParams.builder().condition(
       and(
         field(
@@ -506,12 +504,8 @@ public class EventsResourceTest {
 
   @Test
   @Order(65)
+  @Tag("searchEventsByDateRange")
   public void searchEventsByDateRange() {
-
-    /*
-     * Find events:
-     * between dates
-     * */
     EventParams params = EventParams.builder().condition(
       and(
         field(
@@ -540,30 +534,20 @@ public class EventsResourceTest {
       .statusCode(200)
       .extract()
       .body().jsonPath().getList(".", Event.class);
-
     assertEquals(4, events.size());
-
   }
 
   @Test
   @Order(70)
+  @Tag("searchEventsByDateRange2")
   public void searchEventsByDateRange2() {
-
     ZonedDateTime startDate = Iso8601.fromIso("2024-01-01T12:12:15.20");
     ZonedDateTime endDate = Iso8601.fromIso("2030-01-01T12:12:12.12");
-
-    /*
-     * Find events:
-     * between dates
-     * */
     EventParams params = EventParams.builder().condition(
       and(
         field(
           "created",
           gtLt(
-            /*
-             * Hour dependend (check event object to see the comparison)
-             * */
             startDate,
             endDate
           )
@@ -597,29 +581,19 @@ public class EventsResourceTest {
         "Event date is out of range: " + createdDate
       );
     }
-
   }
 
   @Test
   @Order(75)
+  @Tag("searchEventsByDateRange3")
   public void searchEventsByDateRange3() {
-
     ZonedDateTime startDate = Iso8601.fromIso("2024-01-01T00:01:10.20");
     ZonedDateTime endDate = Iso8601.fromIso("2024-06-15T23:31:45.50");
-
-    /*
-     * Find events:
-     * where created is between both date values
-     * same as before just with different dates
-     * */
     EventParams params = EventParams.builder().condition(
       and(
         field(
           "created",
           gtLt(
-            /*
-             * Hour dependend (check event object to see the comparison)
-             * */
             startDate,
             endDate
           )
@@ -658,8 +632,8 @@ public class EventsResourceTest {
 
   @Test
   @Order(80)
+  @Tag("complexQuery")
   public void complexQuery() {
-
     ZonedDateTime startDate = Iso8601.fromIso("2024-01-01T00:01:10.20");
     ZonedDateTime endDate = Iso8601.fromIso("2024-06-15T23:31:45.50");
 
@@ -721,14 +695,12 @@ public class EventsResourceTest {
 
   @Test
   @Order(85)
+  @Tag("complexQuery2")
   public void complexQuery2() {
-
     ZonedDateTime startDate = Iso8601.fromIso("2025-01-01T00:01:10.20");
     ZonedDateTime endDate = Iso8601.fromIso("2026-06-15T23:31:45.50");
     ZonedDateTime startDate2 = Iso8601.fromIso("2024-06-14T00:00:00.000");
     ZonedDateTime endDate2 = Iso8601.fromIso("2024-06-17T00:00:00.000");
-
-
     /*
      * Find all the events:
      * that container either of the field value (target.created or trace.group..)
@@ -797,6 +769,7 @@ public class EventsResourceTest {
 
   @Test
   @Order(90)
+  @Tag("complexQuery3")
   public void complexQuery3() {
 
     /*
@@ -842,6 +815,7 @@ public class EventsResourceTest {
 
   @Test
   @Order(95)
+  @Tag("complexQuery4")
   public void complexQuery4() {
 
     ZonedDateTime startDate = Iso8601.fromIso("2025-01-01T00:01:10.20");
@@ -895,6 +869,7 @@ public class EventsResourceTest {
 
   @Test
   @Order(100)
+  @Tag("complexQuery5")
   public void complexQuery5() {
     ZonedDateTime startDate = Iso8601.fromIso("2025-01-01T00:01:10.20");
     ZonedDateTime endDate = Iso8601.fromIso("2026-06-15T23:31:45.50");
